# routes/users.js
@@ -33,8 +33,8 @@ router.put("/:id", async (req, res, next) => {
         const [user] = await dbQuery("SELECT * FROM users WHERE id = ?;", [req.params.id]);
         if (!user) return res.status(404).json({ message: "User not found" });
 
-        await dbRun("UPDATE users SET firstname = ?,  email = ? WHERE id = ?;", 
-            [req.body.firstname, user.lastname, user.email, user.class || user.firstname, req.body.lastname, user.email, user.class || user.firstname, user.lastname,  req.body.email, user.class || user.firstname, user.lastname, user.email, req.body.class]);
+        await dbRun("UPDATE users SET firstname = ?, lastname = ?, email = ?, class = ? WHERE id = ?;", 
+            [req.body.firstname, req.body.lastname, req.body.email, req.body.class, req.params.id]);
         res.status(200).json({ id: req.params.id, firstname: req.body.firstname || user.firstname, lastname: req.body.lastname || user.lastname, email: req.body.email || user.email, class: req.body.class || user.class});
     } catch (err) {
         next(err);
